--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,14 +14,121 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+} */
+
+* {
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #2E221B;
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.background {
+  background-image: URL(https://res.dvc.land/dvc-web/res/Background.png);
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+}
+
+/* ------------------------------------------------------------------------ */
+/* Title */
+
+.titileLogo img {
+  max-width: 35%;
+  max-height: 100px;
+  height: auto;
+}
+
+/* ------------------------------------------------------------------------ */
+/* Dragon Illust */
+
+.drgaonIllust img {
+  margin-top: 5%;
+
+  /* auto size with fix ratio and limit */
+  max-width: 70%;
+  max-height: 750px;
+  width: auto;
+  height: auto;
+}
+
+/* ------------------------------------------------------------------------ */
+/* Dragon Field */
+
+.dragonCenter {
+  margin-top: 15%;
+}
+
+.dragonField {
+  position: relative;
+}
+
+.dragonField img {
+  max-width: 80%;
+  max-height: 450px;
+  width: auto;
+  height: auto;
+}
+
+.drgaonDot {
+  width: 80%;
+  height: 80%;
+
+  position: absolute;
+  bottom: 55%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.drgaonEgg {
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.dragonShadow {
+  position: absolute;
+  bottom: -10%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: -2;
+
+  display: flex;
+  justify-content: space-around;
+}
+
+.dragonShadow img {
+  opacity: 0.5;
+  max-width: 200%;
+  width: 200%;
+  height: auto;   
+}
+
+.spineCanvas {
+  width: 65%;
+  height: 100%;
+
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -15%); /* 50 -> 15 */
+}
+
+.auraBackCanvas {
+  z-index: -1;
+}
+
+.dragonCanvas {
+  z-index: 0;
+}
+
+.auraFrontCanvas {
+  z-index: 1;
 }
