--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,13 +29,18 @@ body {
 }
 
 .background {
-  background-image: URL(https://res.dvc.land/dvc-web/res/Background.png);
+  background-image: URL("/imgs/background.png");
   background-size: 100%;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   padding: 1% 2%;
-  position: absolute;
 }
+
+.notShown {
+  display: none;
+}
+
 /* ------------------------------------------------------------------------ */
 /* Text Size */
 
@@ -77,19 +82,6 @@ body {
 }
 
 /* ------------------------------------------------------------------------ */
-/* Dragon Illust */
-
-.drgaonIllust img {
-  margin-top: 5%;
-
-  /* auto size with fix ratio and limit */
-  max-width: 70%;
-  max-height: 750px;
-  width: auto;
-  height: auto;
-}
-
-/* ------------------------------------------------------------------------ */
 /* Dragon Field */
 .alignCenter {
   margin-left: auto;
@@ -99,29 +91,39 @@ body {
 }
 
 .dragonCenter {
-  margin-top: 15%;
+  margin-top: 10%;
   position: relative;
-  width: 80%;
-  height: 80%;
+  width: 60%;
+  height: 35vh;
   margin-left: auto;
   margin-right: auto;
 }
 
-.dragonField img {
-  max-width: 80%;
-  max-height: 450px;
+.field {
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  max-height: 30vh;
+}
+
+.fieldWrapper{ /* spaces dragons out */
+  width: 100%;
+  position: relative;
+}
+
+.dragonField{
   width: auto;
   height: auto;
 
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  top: 0;
   left: 0;
   right: 0;
+  top: 0;
   text-align: center;
 }
-
 
 .dragonDot {
   width: 80%;
@@ -161,13 +163,13 @@ body {
 .spineCanvas {
   width: 100%;
   height: 100%;
-  min-width: 700px;
-  min-height: 800px;
+  min-height: 575px;
+  min-width: 250px;
 
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  top: -60%;
+  margin: auto;
+  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
   text-align: center;
@@ -185,14 +187,25 @@ body {
   z-index: 4;
 }
 
+.gender{
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  position: absolute;
+  top: 80%;
+  width: 60px;
+  height: auto;
+}
+
 /* ------------------------------------------------------------------------ */
 /* Dragon Main Name Tag */
 
 .dragonNicknameContainer {
-  position: absolute;
+  position: relative;
   margin-left: auto;
   margin-right: auto;
-  top: 40%;
+  top: 60%;
   left: 0;
   right: 0;
   text-align: center;
@@ -202,7 +215,7 @@ body {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  top: 45%;
+  top: 20%; /* fix later */
   left: 0;
   right: 0;
   text-align: center;
@@ -214,7 +227,4 @@ body {
   white-space: nowrap;
 }
 
-.scoot{
-  position: absolute;
-  top: -30%
-}
+
