--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,10 @@ body {
   display: none;
 }
 
+.hide{
+  visibility: hidden;
+}
+
 /* ------------------------------------------------------------------------ */
 /* Text Size */
 
